[package]
name = "beatoraja-start"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "beatoraja-start"
path = "src/bin/spawn.rs"

[[bin]]
name = "beatoraja-start-with-log"
path = "src/bin/non-spawn.rs"

[dependencies]
